--- a/deploy/pvc.yaml
+++ b/deploy/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: helm-source-pvc
+  name: pvc
 spec:
   storageClassName: gold
   accessModes:
